k8s/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: cloudnative-shop
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
