k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: cloudnative-shop
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
